# bazel-examples

jest/: .bazelrc  BUILD.bazel  WORKSPACE
jest/src/: BUILD.bazel  a.ts
