load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

js_library(
    name = "jest_config",
    srcs = ["jest.config.js"],
    visibility = ["//visibility:public"],
)

platform(
    name = "docker_image_platform",
    # Keep in sync with the BuildBuddy cc toolchain
    # https://github.com/buildbuddy-io/buildbuddy-toolchain/blob/2a9769e75878519bf48c12334214501d4859154b/templates/BUILD.tpl#L104
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "container-image": "docker://505834710180.dkr.ecr.us-west-2.amazonaws.com/verkada/cpu-minimal-base:amd64-latest",
        "use-self-hosted-executors": "false",
    },
)