load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@jest//:defs.bzl", "jest_test")

esbuild(
    name = "app_bundle",
    define = {"process.env.NODE_ENV": '"production"'},
    entry_points = ["a.ts"],
    metafile = False,
    minify = True,
    deps = [":src_ts"],
)

ts_project(
    name = "src_ts",
    srcs = [
        "CheckboxWithLabel.tsx",
        "a.ts",
        "a.css",
    ],
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/@types/react",
    ],
)

ts_project(
    name = "src_test_ts",
    srcs = [
        "CheckboxWithLabel.spec.tsx",
        "a.spec.ts",
    ],
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":src_ts",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
    ],
)

jest_test(
    name = "src_test",
    config = "//:jest_config",
    data = [
        ":src_test_ts",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/react",
    ],
)
